--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Docs/Communications/2024/MatchingBenchmark-FRCCS2024"]
 	path = Docs/Communications/2024/MatchingBenchmark-FRCCS2024
 	url = git@github.com:JusteRaimbault/MatchingBenchmark-FRCCS2024.git
+[submodule "Docs/Communications/2024/CCS2024/CCS2024_Matching"]
+	path = Docs/Communications/2024/CCS2024/CCS2024_Matching
+	url = git@github.com:JusteRaimbault/CCS2024_Matching.git
