--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "Docs/Communications/2024/AGILE2024-Subdense"]
 	path = Docs/Communications/2024/AGILE2024-Subdense
 	url = git@github.com:JusteRaimbault/AGILE2024-Subdense.git
+[submodule "Docs/Communications/2024/Subdense-Poster-AGILE2024"]
+	path = Docs/Communications/2024/Subdense-Poster-AGILE2024
+	url = git@github.com:subdense/Subdense-Poster-AGILE2024.git
