--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "Models/Matching/pymatch"]
 	path = Models/Matching/pymatch
 	url = git@github.com:umrlastig/pymatch.git
+[submodule "Models/Statistics/DensificationDrivers"]
+	path = Models/Statistics/DensificationDrivers
+	url = git@github.com:subdense/DensificationDrivers.git
